tests/algorithms/x/Java/project_euler/problem_056/sol1.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden887_sol11588677780/001/Main.java:18: error: incompatible types: String cannot be converted to int
            sum = sum + (s.substring(i_1, i_1+1));
                      ^
1 error
